# sasd-protocols

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
document/: 01_modelos_consistencia.md  02_protocolos.md  03_arquitecturas.md  04_implementacion.md  05_resultados.md  06_tabla_protocolos.md  07_tabla_arquitecturas.md  08_conclusiones.md
extra/: fast_event_ordering.py
extra/java/: SASDClientThread.java  SASDGenericServer.java
extra/java/ballarmada/: BAState.java
src/: Main.java  SASDClientThread.java  SASDGenericServer.java  SASDPacket.java  SASDPacketBay.java  SASDServer.java  bvec.c  bvec.h  client.c  dr_server.c  dr_start.sh  feo_start.sh  game.c  game_dead_reckoning.c  game_deadreckoning.c  game_fasteventordering.c  game_timewarp.c  main.c  packets.c  packets.h  recvpool.c  recvpool.h  server.c  tw_start.sh  vec.c  vec.h
src/ballarmada/: BABall.java  BAEvent.java  BAGameTest.java  BAGameplay.java  BAState.java  BATrace.java
src/balls/: balls.c  balls.h  draw.c  draw.h
src/java/: SASDPacketBay.java
src/java/ballarmada/: BAGameTest.java  BATrace.java
src/netutils/: CMakeLists.txt
tests/: ClientTest.java  ServerTest.java  TypeAPacket.java  TypeBPacket.java
tex/: 00_intro.tex  01_modelos_consistencia.tex  02_protocolos.tex  03_arquitecturas.tex  04_implementacion.tex  05_resultados.tex  06_tabla_protocolos.tex  07_tabla_arquitecturas.tex  08_conclusiones.tex  main.bib  main.tex
